--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <div class="header-content-inner">
                 <h1>Francesco Dini - prova</h1>
                 <hr>
-                <p>Alla grandissima</p>
+                <p>Alla grandissima!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
         </div>
